# DynaMind-ToolBox

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.2.6pre1  Dockerfile  DynaMind-ToolBoxCPack.txt  DynaMind-ToolBoxCPack_with_Python.txt  DynaMind-ToolBoxCPack_with_Python_sfcgal.txt  DynaMindCPack.txt  DynaMindGuiCPack.txt  Jenkinsfile  LICENSE  README.md  Readme  Readme.md  ReleaseNotes.txt  TODO.md  dynamindbatcher.py  genindex.html  index.html  index_template.html  install_and_compile.html  introduction.html  known_problems.html  main.cpp  module.html  objects.inv  params.json  quick-intro-gui.html  search.html  searchindex.js  tipps_and_tricks.html  view.html
DynaMind/: .gitignore  CMakeLists.txt  dynamind_sim_api.html  index.html  interlinked_datasets.html  module.html  release_notes.html  simulation.html  simulations_python.html
DynaMind-ComplexUnitTests/src/: CMakeLists.txt  main.h  performnacetests.cpp  performnacetests.h  testcgal.cpp  testcgal.h  testsimulation.cpp  testsimulation.h
DynaMind-DynAlp/src/: CMakeLists.txt  LICENSE
DynaMind-Extensions/: CMakeLists.txt  README.md
DynaMind-Extensions/python-swig/: CMakeLists.txt
DynaMind-Extensions/src/: CMakeLists.txt  cgalgeometry.cpp  cgalregulartriangulation.cpp  cgalsearchoperations.cpp  cgaltriangulation.h  littlegeometryhelpers.h  print_utils.h  spatialsearchnearestnodes.cpp  spatialsearchnearestnodes.h  triangulaterasterdata.cpp
DynaMind-Extensions/unit-tests/: CMakeLists.txt  unittestsdmextensions.cpp
DynaMind-GDALModules/: CMakeLists.txt  dm_calculatedistance.html  dm_createcomponent.html  dm_creategrid.html  dm_direct_graph.html  dm_exportsimulationdb.html  dm_importswmm.html  dm_publishtosftp.html  dm_sqlcalculator.html  dm_strahler.html  dm_value_from_raster.html  dualmapping.html  gdalattributecalculator.html  gdalcalculatecentroids.html  gdalcalculatelength.html  gdalclusternetwork.html  gdalcopyelementtoview.html  gdalcreatebuilding.html  gdalcreateneighbourhoodtable.html  gdaldmswmm.html  gdalerase.html  gdalextractnodes.html  gdalgeometricattributes.html  gdalhotstarter.html  gdalimportdata.html  gdaljoinnearestneighbour.html  gdallogattributes.html  gdalmergefaces.html  gdaloffset.html  gdalparceling.html  gdalparcelsplit.html  gdalpublishresults.html  gdalremovecomponents.html  gdalspatiallinking.html  index.html  loopgroup.html  nonspatiallinking.html  overview.html  release_notes.html  rwhtcostmodel.html  (+1 more)
DynaMind-GDALModules/doc/: dm_createcomponent.rst  dm_creategrid.rst  dm_direct_graph.rst  dm_import_landcover_geoscape.rst  dm_importswmm.rst  dm_publishtosftp.rst  dm_sftp_hotstart.rst  dm_sqlcalculator.rst  dm_value_from_raster.rst  dm_value_from_raster_poly.rst  dualmapping.rst  gdalattributecalculator.rst  gdalcalculatecentroids.rst  gdalcalculatelength.rst  gdalclusternetwork.rst  gdalcreatebuilding.rst  gdalcreateneighbourhoodtable.rst  gdaldmswmm.rst  gdalextractnodes.rst  gdalimportdata.rst  gdaljoinnearestneighbour.rst  gdallogattributes.rst  gdalmergefaces.rst  gdaloffset.rst  gdalparcelsplit.rst  gdalpublishresults.rst  gdalspatiallinking.rst  index.rst  loopgroup.rst  release_notes.rst
DynaMind-GDALModules/scripts/: CMakeLists.txt  GDALWebModules.py
DynaMind-GDALModules/test_data/: complex_polygon_1.geojson  sa1_part_nodes.geojson  self_itersect.sbx  self_itersect.shx
DynaMind-GDALModules/unit-tests/: CMakeLists.txt  gdalmodules_unittests.cpp  gdalmodules_unittests.h
DynaMind-Performance-Assessment/: CMakeLists.txt  citydrain3.html  citydrain_api.html  index.html  node_consumption.html  node_flowprobe.html  node_mixer.html  node_rwht.html  node_sewer.html  rainwaterharvestingoptions.html
DynaMind-Performance-Assessment/cd3/: CMakeLists.txt  Cd3CPack.txt
DynaMind-Performance-Assessment/doc/: citydrain3.rst  index.rst  node_consumption.rst  node_flowprobe.rst  node_ixxrainread_v2.rst  node_polder.rst  node_sewer.rst  node_sourcevector.rst  node_﻿imperviousrunoff.rst  rainwaterharvestingoptions.rst  urban_metabolism.rst  (+1 more)
Dynamind-Executable/: CMakeLists.txt  main.cpp
data/: CMakeLists.txt  intervalyear.csv  r15_sample.csv  swmm-sample.rep
doc/: AddDataToNewView.md  AddSingleComponent.md  AppendAttributes.md  AppendViewFromSystem.md  AttributeCalculator.md  CMakeLists.txt  CalculateBoundingBox.md  CalculateCentroid.md  CellularAutomata.md  CityBlock.md  ClearView.md  Clearview.md  CreateHouses.md  ExportNodesToFile.md  ExportRasterData.md  ExportToShapeFile.md  Exportnodestofile.md  Exportrasterdata.md  Exporttoshapefile.md  FaceAttributeToRaster.md  FaceToEdge.md  ImportRasterData.md  Importrasterdata.md  ImportwithGDAL.md  Importwithgdal.md  JoinDatastreams.md  List_of_Basic_Modules.md  OffsetFace.md  Parcels.md  RemoveComponent.md  SinglePoint.md  Singlepoint.md  SpatialLinking.md  SuperBlock.md  basic_modules.md  compile  compile~  dm_calculatedistance.rst  dm_direct_graph.rst  dm_importswmm.rst  (+33 more)
scripts/: CMakeLists.txt  Drainage.py  GDALModules.py  Modules.py  Sewer.py
src/: CGALSkeletonisation.cpp  CMakeLists.txt  advancedparceling.cpp  advancedparceling.h  boosttraits.h  calculatelength.cpp  calculatelength.h  cgalgeometry.cpp  cgalgeometry.h  cgalgeometry_p.cpp  cgalgeometry_p.h  cgalregulartriangulation.cpp  cgalregulartriangulation.h  cgalsearchoperations.cpp  cgalsearchoperations.h  cgalskeletonisation.h  cgaltriangulation.cpp  cgaltriangulation.h  connectnodes2graph.cpp  connectnodes2graph.h  createbuilding.cpp  createbuilding.h  createepanetmodel.cpp  createepanetmodel.h  createsinglefamilyhouses.cpp  createsinglefamilyhouses.h  cutelittlegeometryhelpers.cpp  cutelittlegeometryhelpers.h  dahelper.cpp  dahelper.h  directnetwork.cpp  directnetwork.h  dmaddlayerdialog.cpp  dmaddlayerdialog.h  dmaddlayerdialog.ui  dmcolorbarwidget.cpp  dmcolorbarwidget.h  dmcolorramp.cpp  dmcolorramp.h  dmcomponenteditor.cpp  (+170 more)
src/core/: DM.h  (+156 more)
unit-tests/: CMakeLists.txt  gdalmodules_unittests.cpp  gdalmodules_unittests.h  unittestsbasicmodules.cpp  unittestsbasicmodules.h  unittestsdmextensions.cpp  unittestsdmextensions.h
(+2385 files in other folders)
