CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(dynamind)
ADD_DEFINITIONS(-DDYNAMIND_VERSION_CORE="0.8.0-beta4")

OPTION(WITH_UNIT_TESTS "build unit tests" OFF)
OPTION(PYTHON_EMBEDDING "Embedding Python" ON)
OPTION(USEQT5 "Use Qt5" OFF)

IF(USEQT5)
    MESSAGE(STATUS "Using Qt5 for core")
    SET(CMAKE_INCLUDE_CURRENT_DIR ON)
    FIND_PACKAGE(Qt5Core)
    FIND_PACKAGE(Qt5Concurrent)
    FIND_PACKAGE(Qt5Sql)
    FIND_PACKAGE(Qt5Xml)
    FIND_PACKAGE(Qt5Gui)
    FIND_PACKAGE(Qt5Test)
    INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${Qt5Concurrent_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${Qt5Xml_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${Qt5Sql_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${Qt5Gui_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${Qt5Test_INCLUDE_DIRS})
    ADD_DEFINITIONS(-DUSEQT5)
ELSE()
    MESSAGE(STATUS "Using Qt4 for core")
    FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtXml QtTest REQUIRED)
    SET(QT_USE_QTXML TRUE)
    SET(QT_USE_QTTEST TRUE)
    SET(QT_USE_QTSQL TRUE)
    SET(QT_USE_QTGUI TRUE)
    SET(QT_USE_QTCORE TRUE)
    INCLUDE(${QT_USE_FILE})
ENDIF()

FIND_PACKAGE(GDAL)
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})

IF(CMAKE_BUILD_TYPE STREQUAL Debug)
        MESSAGE(STATUS "Build Type = Debug")
        ADD_DEFINITIONS(-DDEBUG)
ELSE()
        MESSAGE(STATUS "Build Type = Release")
ENDIF()

IF(DYNAMIND_TOOLBOX_BUILD_DIR)
    SET(OUTPUT_DIR ${DYNAMIND_TOOLBOX_BUILD_DIR})
ELSE()
    SET(OUTPUT_DIR ${dynamind_BINARY_DIR})
ENDIF()

SET(LIBRARY_OUTPUT_PATH ${OUTPUT_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})
SET(SCRIPT_PATH ${OUTPUT_DIR}/PythonModules)

INCLUDE_DIRECTORIES(src/core ${QT_QTCORE_INCLUDE_DIR})

IF(PYTHON_EMBEDDING)
    FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
    FIND_PROGRAM(PYTHON_EXECUTABLE NAMES python)
    INCLUDE_DIRECTORIES(src/python-swig ${PYTHON_INCLUDE_PATH})
    FIND_PACKAGE(SWIG REQUIRED)
    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
	SET(PYTHON_SITE_PACKAGES "lib/python2.7/site-packages")
	#execute_process ( COMMAND ${PYTHON_EXECUTABLE} -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
ELSE()
    ADD_DEFINITIONS(-DPYTHON_EMBEDDING_DISABLED)
ENDIF()

ADD_SUBDIRECTORY(src/core)

IF(PYTHON_EMBEDDING)
    ADD_SUBDIRECTORY(src/python-swig)
ENDIF()


ADD_SUBDIRECTORY(src/DMToolboxes)


IF(WITH_UNIT_TESTS)
    enable_testing()
	ADD_SUBDIRECTORY(src/unit-test)
	ADD_SUBDIRECTORY(src/DMTestModules)
	ADD_SUBDIRECTORY(src/memory_test)
	ADD_SUBDIRECTORY(scripts)
ENDIF(WITH_UNIT_TESTS)



ADD_SUBDIRECTORY(CMake)

#INCLUDE(DynaMindCPack.txt)
