SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
FIND_PACKAGE(Sphinx REQUIRED)

IF(NOT DEFINED SPHINX_THEME)
    SET(SPHINX_THEME default)
ENDIF()

IF(NOT DEFINED SPHINX_THEME_DIR)
    set(SPHINX_THEME_DIR)
ENDIF()

# configured documentation tools and intermediate build results
SET(BINARY_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/_build")
FILE(REMOVE_RECURSE ${BINARY_BUILD_DIR})

# Sphinx cache with pickled ReST documents
SET(SPHINX_CACHE_DIR "${CMAKE_CURRENT_BINARY_DIR}/_doctrees")
FILE(REMOVE_RECURSE ${SPHINX_CACHE_DIR})

# HTML output directory

IF(DYNAMIND_TOOLBOX_BUILD_DIR)
	SET(LIBRARY_OUTPUT_PATH ${DYNAMIND_TOOLBOX_BUILD_DIR})
	SET(EXECUTABLE_OUTPUT_PATH ${DYNAMIND_TOOLBOX_BUILD_DIR})
ELSE()
	SET(LIBRARY_OUTPUT_PATH ${dynamind-gui_BINARY_DIR})
	SET(EXECUTABLE_OUTPUT_PATH ${dynamind-gui_BINARY_DIR})
ENDIF()

SET(SPHINX_HTML_DIR "${DYNAMIND_TOOLBOX_BUILD_DIR}/doc")
FILE(REMOVE_RECURSE ${SPHINX_HTML_DIR})

CONFIGURE_FILE(
    "${CMAKE_CURRENT_SOURCE_DIR}/source/conf.py"
    "${BINARY_BUILD_DIR}/conf.py"
    @ONLY)

FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/source DESTINATION ${BINARY_BUILD_DIR})



SET(TOOLBOX_MODULES ${TOOLBOX})

ADD_CUSTOM_TARGET(dynamind_toolbox_docs ALL
	${PYTHON_EXECUTABLE} compile_doc.py ${CMAKE_SOURCE_DIR} ${TOOLBOX_MODULES}
	COMMAND ${PYTHON_EXECUTABLE} ${SPHINX_EXECUTABLE} -q -b html -c "${BINARY_BUILD_DIR}" -d "${SPHINX_CACHE_DIR}" "${BINARY_BUILD_DIR}/source" "${SPHINX_HTML_DIR}"
	WORKING_DIRECTORY ${BINARY_BUILD_DIR}/source)

#create directory before install target
FILE(MAKE_DIRECTORY ${SPHINX_HTML_DIR}/)

INSTALL(DIRECTORY ${SPHINX_HTML_DIR}/
		DESTINATION "doc/DynaMind")


