FILE(GLOB MODULE_CPPS *.cpp)
FILE(GLOB MODULE_H *.h)

FILE(GLOB MODULE_CPPS_mux *.cpp ../3rdparty/muparserx/parser/*.cpp)


INCLUDE_DIRECTORIES(../3rdparty/muparserx)
INCLUDE_DIRECTORIES(../3rdparty/swmm)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${DYNAMIND_EXTENSIONS_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${SFCGAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES()

ADD_LIBRARY(dynamind-gdalmodules SHARED ${MODULE_CPPS} ${MODULE_H}  ${MODULE_CPPS_mux})

SET_TARGET_PROPERTIES(dynamind-gdalmodules PROPERTIES AUTOMOC TRUE)

TARGET_LINK_LIBRARIES(dynamind-gdalmodules swmm5 ${GEOS_LIBRARY} ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES} ${GDAL_LIBRARY} ${SFCGAL_LIBRARY})





