FILE(GLOB MODULE_CPPS *.cpp)
FILE(GLOB MODULE_H *.h)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(dynamind-extensions SHARED ${MODULE_CPPS} ${MODULE_H})

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
        SET_TARGET_PROPERTIES(dynamind-extensions  PROPERTIES COMPILE_FLAGS "-frounding-math -fPIC")
ENDIF()

TARGET_LINK_LIBRARIES(dynamind-extensions ${DYNAMIND_TOOLBOX_LIBRARY} ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${Boost_LIBRARIES})

INSTALL(TARGETS dynamind-extensions 
        DESTINATION "lib/DynaMind"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
