FILE(GLOB DYNAVIBE_CPPS *.cpp ./ws/*.cpp ./sewer/*.cpp ./ws/performance/*.cpp ./graph/*.cpp ./graph/analysis/*.cpp ./testing/*.cpp ./testing/*.c ./general/*.cpp)

INCLUDE_DIRECTORIES(. ./ws ./sewer ./graph ./ws/performance ./graph/analysis ./testing ./general)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

FILE(GLOB DYNAVIBE_UI_FILES ./general/*.ui)

IF(USEQT5)
    QT5_WRAP_UI(DYNAVIBE_CPPS ${DYNAVIBE_UI_FILES})
    QT5_WRAP_CPP(DYNAVIBE_CPPS ${MOC_MODULE_FILES})
ELSE()
    QT4_WRAP_UI(DYNAVIBE_CPPS ${DYNAVIBE_UI_FILES})
    QT4_WRAP_CPP(DYNAVIBE_CPPS ${MOC_MODULE_FILES})
ENDIF()

ADD_LIBRARY(dynamind-dynavibe SHARED ${DYNAVIBE_CPPS})
SET_TARGET_PROPERTIES(dynamind-dynavibe PROPERTIES AUTOMOC TRUE)

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
	SET_TARGET_PROPERTIES(dynamind-dynavibe  PROPERTIES COMPILE_FLAGS "-frounding-math -fPIC")
ENDIF()

IF(USEQT5)
    TARGET_LINK_LIBRARIES(dynamind-dynavibe ${DYNAMIND_CORE_LIBRARY} ${Boost_LIBRARIES} ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} Qt5::Core Qt5::Widgets ${CGAL_LIBRARIES} epanet2)
ELSE()
    TARGET_LINK_LIBRARIES(dynamind-dynavibe ${DYNAMIND_CORE_LIBRARY} ${Boost_LIBRARIES} ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} ${QT_LIBRARIES} ${CGAL_LIBRARIES} epanet2)
ENDIF()
