FILE(GLOB DYNALP_CPPS *.cpp ./common/*.cpp ./urbandevel/*.cpp)

INCLUDE_DIRECTORIES(. ./common ./urbandevel)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(DynAlp SHARED ${DYNALP_CPPS})

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
                SET_TARGET_PROPERTIES(DynAlp PROPERTIES COMPILE_FLAGS "-frounding-math -fPIC")
ENDIF()

IF(USEQT5)
    TARGET_LINK_LIBRARIES(DynAlp ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} Qt5::Core ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${GDAL_LIBRARY})
ELSE()
    TARGET_LINK_LIBRARIES(DynAlp ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY} ${QT_LIBRARIES} ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${GDAL_LIBRARY})
ENDIF()
