SET(gtest_force_shared_crt "ON" CACHE BOOL "")
MESSAGE(STATUS "gtest_force_shared_crt = ${gtest_force_shared_crt}")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
		    ${gtest_SOURCE_DIR}/include
		    ${CMAKE_CURRENT_SOURCE_DIR}/../src)

INCLUDE_DIRECTORIES( ${DYNAMIND_EXTENSIONS_INCLUDE_DIR})

FILE(GLOB UNIT_CPP *.cpp)

ADD_EXECUTABLE(unit-test_gdalmodules ${UNIT_CPP})

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
	SET_TARGET_PROPERTIES(unit-test_gdalmodules PROPERTIES COMPILE_FLAGS "-frounding-math -fPIC")
ENDIF()

IF(USEQT5)
	TARGET_LINK_LIBRARIES(unit-test_gdalmodules gtest_main ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY}  Qt5::Gui Qt5::Core ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${GDAL_LIBRARY} ${SQLITE3_LIBRARY})
ELSE()
	TARGET_LINK_LIBRARIES(unit-test_gdalmodules gtest_main ${DYNAMIND_TOOLBOX_LIBRARY} ${DYNAMIND_CORE_LIBRARY} ${DYNAMIND_EXTENSIONS_LIBRARY}  ${QT_QTMAIN_LIBRARY} ${QT_LIBRARIES} ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} ${GDAL_LIBRARY} ${SQLITE3_LIBRARY})

ENDIF()



